# courses

./: .gitignore  .gitmodules  CMakeLists.txt  ISR01.doc  Makefile  README.md  README.proj1  README.proj1.md  config.c  config.h  git-lazy.sh  main.c  proc.c  proc.h  requirements.txt  util.c  util.h
Homework1/: r.ucf  (+54 more)
hw/hw04/src/: CMakeLists.txt  adc_controller.c  adc_controller.h  lcd_driver.c  lcd_driver.h  main.c  pin_change_interrupt.c
project/: CMakeLists.txt  final_output_pspice.csv  report.docx  ~$report.docx  ~WRL0762.tmp
project/proj1/: Makefile  main.R  report.aux  report.tex  test.R
project/proj2/: Makefile  main.R  part1.tex  part2.tex  part3.tex  report.aux  report.tex
project/proj3/: main.R  report.aux  report.tex
project/proj3/latex_mods/: part1.tex  part1_out.tex  part1_result.tex  part2.tex  part2_out.tex  part2_result.tex  part3.tex  part3_out.tex  part3_result.tex  part4.tex  part4_out.tex  part5.tex  part6.tex
project/project1/: CMakeLists.txt  Makefile  main.cpp  main.h  time.py  timeit.py  times.txt
project/project1/Vbox/: check_gmp.py  more_specs.txt
project/project1/analysis/: plot.py  requirements.txt  secret.py  timeit.py  times.txt
project/project1/analysis/report/: Makefile  report.tex  structure.tex
project/project1/analysis/times/: 07cmplx_numbers_20_100bit.txt  cmplx_numbers_20_200bit.txt  cmplx_numbers_20_2bit.txt  cmplx_numbers_25_30bit.txt  cmplx_numbers_25_40bit.txt  cmplx_numbers_32_10bit.txt  cmplx_numbers_34_8bit.txt
project/project1/analysis/timestats/: cmplx_numbers_25_20bit.txt  cmplx_numbers_32_008bit.txt  cmplx_numbers_32_010bit.txt  cmplx_numbers_32_020bit.txt  cmplx_numbers_32_030bit.txt  cmplx_numbers_32_040bit.txt  cmplx_numbers_32_100bit.txt  cmplx_numbers_32_200bit.txt  cmplx_numbers_32_8bit.txt  cmplx_numbers_34_8bit.txt  cmplx_numbers_64_008bit.txt  cmplx_numbers_64_010bit.txt  cmplx_numbers_64_020bit.txt  (+2 more)
project/project1/report/: report.tex  structure.tex
project/project1/sample_input/: cmplx_numbers_100_200bit.txt  cmplx_numbers_20_100bit.txt  cmplx_numbers_20_200bit.txt  cmplx_numbers_25_20bit.txt  cmplx_numbers_25_30bit.txt  cmplx_numbers_25_40bit.txt  cmplx_numbers_32_030bit.txt  cmplx_numbers_32_040bit.txt  cmplx_numbers_32_100bit.txt  cmplx_numbers_32_10bit.txt  cmplx_numbers_34_8bit.txt  cmplx_numbers_64_010bit.txt  cmplx_numbers_64_100bit.txt  cmplx_numbers_64_200bit.txt
project/project1/times/: cmplx_numbers_25_20bit.txt  cmplx_numbers_32_10bit.txt  cmplx_numbers_32_8bit.txt
project/project2/: Makefile  seq1.txt  seq2.txt
project/project2/analysis/: data.json  plot.py  slurm.out
project/project2/report/: final.tex  milestone2.tex  structure.tex
project/project2/src/: CMakeLists.txt  Makefile  data.txt  lcs_length.c  lcs_length.cpp  lcs_length.slurm  lcs_length16.out  lcs_length16.slurm  lcs_length8.slurm  main.cpp  main.slurm  seq1.txt  seq2.txt  stats.sh
project/scripts/: final_output_pspice.csv  plotter.py
project/src/: Makefile  README.md  assembler.py  hazards.py  inst.txt  instructions.py  main.py  make.sh  mips.py  simulator.py  test.txt
project/src/architecture/: hazards.py
project/src/simulator/: assembler.py  hazards.py  mips.py
projects/project2/: CMakeLists.txt  yo.cpp
projects/project2/src/: CMakeLists.txt  Cmakelists.txt  Driver.cpp  Makefile  TicTacNode.cpp  TicTacNode.h  TicTacToe.cpp  TicTacToe.h  TicTacTree.cpp  TicTacTree.h  TicTacTrie.cpp  TicTacTrie.h  testfilenames.txt
projects/project5/: CMakeLists.txt
projects/project5/sampleOutput/: output.txt
projects/project5/sample_output/: output.txt
projects/project5/src/: BackupHash.cpp  BackupHash.h  Hashtable.h  Makefile  Pair.h  PerfectHash.cpp  PerfectHash.h  Project5.cpp  input.txt  main.cpp
(+1640 files in other folders)
